classDiagram
    class Dinero {
        <<Value Object>>
        -Number centavos
        -String moneda
        +sumar(otro) Dinero
        +restar(otro) Dinero
        +multiplicarPorFactor(f) Dinero
        +esCero() Boolean
    }
    class EstrategiaAmortizacion {
        <<interface>>
        +calcularCuota(capital, tasa, n) Dinero
        +generarTabla(capital, tasa, n) Cuota[]
    }
    class EstrategiaFrancesa {
        +calcularCuota(capital, tasa, n) Dinero
        +generarTabla(capital, tasa, n) Cuota[]
    }
    class PlanAmortizacionFactory {
        <<Factory>>
        +generarPlanAmortizacionFrances(capital, tasa, n) PlanAmortizacion
    }
    class PlanAmortizacion {
        +Dinero capital
        +Number tasaMensual
        +Cuota[] cuotas
        +saldoPendiente(k) Dinero
    }
    class Cuota {
        +Number numero
        +Dinero saldoInicial
        +Dinero montoCuota
        +Dinero interes
        +Dinero amortizacion
        +Dinero saldoFinal
    }
    class PoliticaCredito {
        +String version
        +Number tnaVigente
        +Date fechaVigenciaDesde
        +tasaMensual() Number
    }
    class PoliticaMora {
        +Number tnaMoratoria
        +String baseDeConteo
        +tasaDiaria() Number
    }
    class CalculadoraMora {
        <<Specification>>
        +calcularInteresMoratorio(capitalEnMora, dias, politica) Dinero
        +clasificarTramo(diasAtraso) TramoMora
    }
    class Reloj {
        <<interface, puerto secundario>>
        +hoy() Date
    }
    EstrategiaAmortizacion <|.. EstrategiaFrancesa : implementa
    PlanAmortizacionFactory --> EstrategiaAmortizacion : usa
    PlanAmortizacionFactory --> PlanAmortizacion : construye
    PlanAmortizacion "1" --> "1..*" Cuota : contiene
    PlanAmortizacion --> PoliticaCredito : calculado con
    Cuota --> Dinero : usa
    CalculadoraMora --> PoliticaMora : consulta
    CalculadoraMora --> Dinero : usa
    CalculadoraMora --> Reloj : fecha de corte
    EstrategiaFrancesa --> Dinero : usa